--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
+    "express": "^4.13.3",
+    "jade": "^1.11.0",
+    "mongo": "^0.1.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
